--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "nuxt": "^3.8.2",
-    "vue": "^3.3.8",
+    "nuxt-api-party": "^0.21.3",
+    "vue": "^3.3.9",
     "vue-router": "^4.2.5"
   }
 }
