--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-COMPANY_CODE= d05049134c17ed5289ff4e810c2618e4 # BFLdemo  
+COMPANY_CODE= d05049134c17ed5289ff4e810c2618e4
 API_URL=https://erplayer.com/public/api/dealer/
 DOMAIN=https://erplayer.com
