--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxt/ui": "^2.11.0",
     "nuxt": "^3.8.2",
     "nuxt-api-party": "^0.21.3",
     "vue": "^3.3.9",
